# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2023-06-08 Michael Truog   <mjtruog at protonmail dot com>

    * Add the service configuration option 'critical' to
      cause the service to stop the CloudI node
      if the service fails, to escalate the failure
    * Improve the cloudi_service_shell interactive argument

2023-06-07 Michael Truog   <mjtruog at protonmail dot com>

    * Add the interactive argument to cloudi_service_shell

2023-06-05 Michael Truog   <mjtruog at protonmail dot com>

    * Improve the Rust CloudI API
        * Add http_req integration test
    * Update cpg

2023-06-03 Michael Truog   <mjtruog at protonmail dot com>

    * Add Rust CloudI API unwrap macro for callback ? functionality
    * Fix rust messaging test so it doesn't panic on termination
    * Add pid to the external service spawn error 
      (e.g. "OS pid PID spawn error ENUM")

2023-06-02 Michael Truog   <mjtruog at protonmail dot com>

    * Improve external service exit status log output when an error
      occurs during the fork-exec sequence in cloudi_os_spawn
      (e.g. "OS spawn error exec_ENOENT")
    * Fix pre-26.0 Erlang/OTP support that relies on individual
      OTP applications release directories without archive output
      (empty directories) that causes include_lib problems

2023-06-01 Michael Truog   <mjtruog at protonmail dot com>

    * Improve the Rust CloudI API
        * Removed the subscribe_mut function for using closures with a context
          due to the added latency, complexity and functionality problems it
          led to (unsubscribe functionality in a callback wasn't correct)

2023-05-31 Michael Truog   <mjtruog at protonmail dot com>

    * Improve the Rust CloudI API
        * Add subscribe_mut function for using closures with a context
        * Add messaging integration test

2023-05-30 Michael Truog   <mjtruog at protonmail dot com>

    * Improve the Rust CloudI API