@@ -1,6 +1,6 @@
 MIT License
 
-Copyright (c) 2016-2022 Michael Truog <mjtruog at protonmail dot com>
+Copyright (c) 2016-2023 Michael Truog <mjtruog at protonmail dot com>
 
 Permission is hereby granted, free of charge, to any person obtaining a
 copy of this software and associated documentation files (the "Software"),
