@@ -1,6 +1,14 @@
 # -*- coding: utf-8; tab-width: 4; -*-
 # ex: set fenc=utf-8 sts=4 ts=4 et nomod:
 
+2023-06-12 Michael Truog   <mjtruog at protonmail dot com>
+
+    * Remove linux_setcap.sh modifications for the 'cgroup'
+      external service configuration option because adding
+      OS pids to a cgroup requires being root
+        * Using 'cgroup' requires that CloudI was executed as root
+    * Update cgroups
+
 2023-06-08 Michael Truog   <mjtruog at protonmail dot com>
 
     * Add the service configuration option 'critical' to
